# vauban

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.base  Dockerfile.ci  Dockerfile.external-base  Dockerfile.external-stages  Dockerfile.stages  Makefile  README.md  ci.py  config.yml  docker-entrypoint.sh  dracut.conf  kubernetes_controller.py  kubernetes_controller_resources.py  migration-local-vault-to-remote-vault.sh  requirements.txt  setup.py  utils.sh  vauban-backend.sh  vauban-config.sh  vauban-docker.sh  vauban-kubernetes.sh  vauban.py  vauban.sh  version-control.sh
http-server/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
http-server/vauban-http-server/: __init__.py  kube.py  main.py  slack.py
modules.d/: README.md
modules.d/35network-legacy/: ifup.sh
modules.d/45url-lib/: module-setup.sh  url-lib.sh
modules.d/90dmsquash-live/: README.md  apply-live-updates.sh  dmsquash-live-root.sh
modules.d/90liveimg/: fetch-liveimgupdate.sh  liveimg-generator.sh  liveimgroot.sh  module-setup.sh  parse-liveimg.sh
modules.d/90overlay-root/: README  module-setup.sh  overlay-mount.sh
patches/: hide-cmdline.patch
scheduler/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
scheduler/scheduler/: __main__.py
vauban-client/: Dockerfile  Makefile  README.md  client.sh  install.sh
